Update search command to reflect changes on the web

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,8 +276,13 @@
     <string name="asearch_search_scope_my_follows">My Follows</string>
     <string name="asearch_search_scope_my_network">My Network</string>
     <string name="asearch_search_scope_my_follows_interactions">My Follows Interactions</string>
+    <string name="asearch_search_scope_my_network_interactions">My Network Interactions</string>
+    <string name="asearch_search_scope_not_my_follows">Not My Follows</string>
     <string name="asearch_search_order_by_time">Time</string>
     <string name="asearch_search_order_by_content_score">Content Score</string>
+    <string name="asearch_search_order_by_replies">Number of Replies</string>
+    <string name="asearch_search_order_by_sats_zapped">Sats Zapped</string>
+    <string name="asearch_search_order_by_interactions">Number of Interactions</string>
     <string name="asearch_multiselect_apply">Apply</string>
     <string name="asearch_multiselect_anyone">Anyone</string>
     <string name="asearch_search_button">Search</string>
