--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,6 +233,9 @@
     <string name="note_reactions_title">Note Zaps</string>
 
     <string name="explore_search_nostr">Search Nostr</string>
+    <string name="explore_search_notes">Search Notes</string>
+    <string name="explore_search_reads">Search Reads</string>
+    <string name="explore_search_notifications">Search Notifications</string>
     <string name="explore_enter_query">Enter text to search</string>
     <string name="explore_trending_topics_no_content">Trending topics will appear here.</string>
     <string name="explore_feed_search_results">Search Results</string>
