--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -737,6 +737,7 @@
     <string name="accessibility_note_drop_down">Note drop-down</string>
     <string name="accessibility_article_drop_down">Article drop-down</string>
     <string name="accessibility_profile_drop_down">Profile drop-down</string>
+    <string name="accessibility_profile_search">Search notes posted by %1$s</string>
     <string name="accessibility_media_drop_down">Media drop-down</string>
     <string name="accessibility_feed_picker">Feed picker</string>
     <string name="accessibility_search">Search</string>
