--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -269,6 +269,8 @@
     <string name="explore_feed_user_notes_feed_description">Latest notes by user follows</string>
     <string name="explore_feed_user_reads_feed_description">Latest articles by user follows</string>
 
+    <string name="dvm_feed_created_by">Created by</string>
+
     <string name="bookmarks_title_notes">Note Bookmarks</string>
     <string name="bookmarks_title_reads">Reads Bookmarks</string>
     <string name="bookmarks_bottom_sheet_notes">Note Bookmarks</string>
@@ -534,6 +536,9 @@
 
     <string name="profile_follow">Follow</string>
     <string name="profile_unfollow">Unfollow</string>
+
+    <string name="profile_zap_bottom_sheet_fallback_title">Profile</string>
+    <string name="profile_zap_sent_message">Zap sent successfully.</string>
 
     <string name="profile_qr_code_profile_tab">Profile</string>
     <string name="profile_qr_code_lightning_tab">Lightning Address</string>
