--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
     <string name="feed_no_content">There is no content in this feed.</string>
     <string name="feed_error_loading">Unable to load content for this feed. Please try again.</string>
     <string name="feed_refresh_button">Refresh</string>
+    <string name="feed_restore_default_feeds_button">Restore default feeds</string>
+    <string name="feeds_error_loading_user_feeds">Unable to load feeds.</string>
 
     <string name="feed_new_posts_notice_general">posted</string>
     <string name="feed_new_posts_notice_100plus">100+ new notes</string>
