--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,12 @@
     <string name="premium_purchase_tos_notice">By proceeding you acknowledge that\nyou agree to our </string>
     <string name="premium_purchase_tos">Terms of Service</string>
 
+    <string name="premium_promo_code_title">Apply a Promo Code</string>
+    <string name="premium_promo_code_enter_code_below">If you have a promo code enter it below:</string>
+    <string name="premium_promo_code_invalid_code_message">Invalid code. Please try again.</string>
+    <string name="premium_promo_code_apply_button">Apply Promo Code</string>
+    <string name="premium_promo_code_cancel_button">Cancel</string>
+
     <string name="feed_reposted_suffix">reposted</string>
     <string name="feed_see_more">See more…</string>
 
