--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="app_error_invalid_naddr">Unable to load content. The address is invalid.</string>
     <string name="app_error_unable_to_follow_profile">Unable to follow profile. Please try again.</string>
     <string name="app_error_unable_to_unfollow_profile">Unable to unfollow profile. Please try again.</string>
+    <string name="app_error_unable_to_set_nostr_address">Unable to set nostr address. Please try again.</string>
+    <string name="app_error_unable_to_set_lightning_address">Unable to set lightning address. Please try again.</string>
 
     <string name="welcome_sign_in_button_title">Sign In</string>
     <string name="welcome_create_account_button_title">Create Account</string>
