--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,20 @@
     <string name="premium_table_expired_on">Expired on</string>
     <string name="premium_table_apply">apply</string>
 
+    <string name="premium_manage_title">Manage Premium</string>
+    <string name="premium_manage_nostr_tools">Nostr Tools</string>
+    <string name="premium_manage_primal_account">Primal Account</string>
+    <string name="premium_manage_have_a_question">Have a question?</string>
+    <string name="premium_manage_check_faq">Check out our FAQ</string>
+    <string name="premium_manage_media_management">Media Management</string>
+    <string name="premium_manage_premium_relay">Premium Relay</string>
+    <string name="premium_manage_contact_list_backup">Contact List Backup</string>
+    <string name="premium_manage_content_backup">Content Backup</string>
+    <string name="premium_manage_manage_subscription">Manage Subscription</string>
+    <string name="premium_manage_change_primal_name">Change your Primal name</string>
+    <string name="premium_manage_extend_subscription">Extend Your Subscription</string>
+    <string name="premium_manage_legendary_customization">Legendary Profile Customization</string>
+
     <string name="premium_error_play_subscription_purchase_not_found">Unable to cancel the subscription. Please check if you are logged in with your Google Account and try again.</string>
     <string name="premium_error_failed_to_cancel_subscription">Unable to cancel the subscription. Please check your connection and try again.</string>
     <string name="premium_error_failed_to_process_subscription_purchase">We were unable to process your subscription purchase. Please reach out to Primal Support.</string>
