Implement Change Primal Name Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,7 +204,7 @@
     </plurals>
 
     <string name="premium_change_primal_name_title">Change your Primal name</string>
-    <string name="premium_name_changed_title">Primal name Changed</string>
+    <string name="premium_name_changed_title">Primal name changed</string>
     <string name="premium_name_changed_button">Change Primal Name Now</string>
 
     <string name="premium_content_backup_title">Content Backup</string>
