--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,9 @@
     <string name="premium_purchase_tos_notice">By proceeding you acknowledge that\nyou agree to our </string>
     <string name="premium_purchase_tos">Terms of Service</string>
 
+    <string name="premium_extend_subscription_title">Extend Subscription</string>
+    <string name="premium_extend_subscription_notice">Your subscription will be extended by the number of months you buy.</string>
+
     <string name="premium_success_purchase_title">Success</string>
     <string name="premium_success_purchase_headline">Success, payment received!</string>
     <string name="premium_success_purchase_supporting_text">Your subscription is now active!</string>
