--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,6 +160,23 @@
     <string name="premium_support_primal_title">Support Primal</string>
 
     <string name="premium_become_legend_primal_title">Become a Primal Legend</string>
+    <string name="premium_become_legend_intro_subtitle">Donate $1000 or more to gain:</string>
+    <string name="premium_become_legend_intro_perk_unlimited_premium_title">Forever Premium</string>
+    <string name="premium_become_legend_intro_perk_unlimited_premium_description">Primal Premium subscription never expires for legends.</string>
+    <string name="premium_become_legend_intro_perk_private_builds_title">Private Beta Builds</string>
+    <string name="premium_become_legend_intro_perk_private_builds_description">Get access to new features before they are public.</string>
+    <string name="premium_become_legend_intro_perk_custom_profile_title">Legendary Custom Profile</string>
+    <string name="premium_become_legend_intro_perk_custom_profile_description">Option to pick the color of your verified badge and set the glow around your avatar.</string>
+    <string name="premium_become_legend_intro_gratitude_title">♥️ Our Eternal Gratitude ♥️</string>
+    <string name="premium_become_legend_intro_gratitude_description">We’ll never forget our biggest supporters. People like you will help Nostr succeed.</string>
+    <string name="premium_become_legend_button_start">Become a Legend</string>
+    <string name="premium_become_legend_button_pay_now">Pay Now</string>
+    <string name="premium_become_legend_payment_title">On-chain Payment</string>
+    <string name="premium_become_legend_button_copy_invoice">Copy Invoice</string>
+    <string name="premium_become_legend_success_title">Success</string>
+    <string name="premium_become_legend_success_headline">Success, payment received!</string>
+    <string name="premium_become_legend_success_supporting_text">You are now a Primal Legend</string>
+    <string name="premium_become_legend_success_done_button">Done</string>
 
     <string name="premium_manage_title">Manage Premium</string>
     <string name="premium_manage_nostr_tools">Nostr Tools</string>
