--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,7 @@
     <string name="premium_become_legend_button_start">Become a Legend</string>
     <string name="premium_become_legend_button_pay_now">Pay Now</string>
     <string name="premium_become_legend_payment_title">On-chain Payment</string>
+    <string name="premium_become_legend_payment_instruction">Pay this on-chain invoice to complete your purchase. Your legendary status will be active immediately.</string>
     <string name="premium_become_legend_button_copy_invoice">Copy Invoice</string>
     <string name="premium_become_legend_success_title">Success</string>
     <string name="premium_become_legend_success_headline">Success, payment received!</string>
