Implement manage subscription screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,9 +222,17 @@
     <string name="premium_recover_contact_list_table_recover_button">Recover</string>
 
     <string name="premium_order_history_title">Manage Subscription</string>
+    <string name="premium_order_history_date_header">Date</string>
+    <string name="premium_order_history_purchase_header">Purchase</string>
+    <string name="premium_order_history_amount_header">Amount</string>
     <string name="premium_order_history_table_date">Date</string>
     <string name="premium_order_history_table_purchase">Purchase</string>
     <string name="premium_order_history_table_amount">Amount</string>
+    <string name="premium_order_history_cancel_subscription_button">Cancel Premium Subscription</string>
+    <string name="premium_order_history_cancel_dialog_title">Cancel Premium?</string>
+    <string name="premium_order_history_cancel_dialog_text">Your subscription will remain active until the end of your current billing period, so you can continue enjoying premium features until then. No further charges will be made after that date.</string>
+    <string name="premium_order_history_cancel_dialog_confirm_button">Cancel Subscription</string>
+    <string name="premium_order_history_cancel_dialog_dismiss_button">Keep Premium</string>
     <plurals name="premium_purchase_months">
         <item quantity="one">Premium %1$s month</item>
         <item quantity="other">Premium %1$s months</item>
