Implement handling legend status in manage premium

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,6 +192,7 @@
     <string name="premium_manage_change_primal_name">Change your Primal name</string>
     <string name="premium_manage_extend_subscription">Extend Your Subscription</string>
     <string name="premium_manage_legendary_customization">Legendary Profile Customization</string>
+    <string name="premium_manage_become_a_legend">Become a Legend</string>
 
     <string name="premium_media_management_title">Media Management</string>
     <string name="premium_media_management_images">Images</string>
