--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,9 +206,9 @@
     <string name="premium_media_management_table_type_image">Image</string>
     <string name="premium_media_management_table_type_video">Video</string>
     <string name="premium_media_management_table_type_other">Other</string>
-    <string name="premium_media_management_used_storage">%1$.2f GB of %2$.0f GB used</string>
-    <string name="premium_media_management_free_storage">%1$.2f GB free</string>
-    <string name="premium_media_management_media_size">%1$.1f MB</string>
+    <string name="premium_media_management_used_storage">%1$s GB of %2$s GB used</string>
+    <string name="premium_media_management_free_storage">%1$s GB free</string>
+    <string name="premium_media_management_media_size">%1$s MB</string>
 
     <string name="premium_relay_title">Premium Relay</string>
     <string name="premium_relay_top_app_bar_title">Premium Relay</string>
