--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,7 @@
     <string name="premium_media_management_delete_upload_dialog_text">Are you sure you want to delete this media file? Any notes referencing this media file will look broken.</string>
     <string name="premium_media_management_delete_upload_dialog_confirm_button">Delete</string>
     <string name="premium_media_management_delete_upload_dialog_dismiss_button">Dismiss</string>
+    <string name="premium_media_management_deleted_successfully">Media file deleted successfully.</string>
 
     <string name="premium_relay_title">Premium Relay</string>
     <string name="premium_relay_top_app_bar_title">Premium Relay</string>
