--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,6 +283,8 @@
     <string name="premium_support_primal_become_a_legend_title">Become a Legend</string>
     <string name="premium_support_primal_become_a_legend_description">Donate $1.000 or more to gain permanent membership and exclusive perks!</string>
     <string name="premium_support_primal_become_a_legend_button_text">Become a Legend Now</string>
+    
+    <string name="premium_legend_profile_customization">Legendary Profile</string>
 
     <string name="feed_reposted_suffix">reposted</string>
     <string name="feed_see_more">See more…</string>
