--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,6 +285,10 @@
     <string name="premium_support_primal_become_a_legend_button_text">Become a Legend Now</string>
     
     <string name="premium_legend_profile_customization">Legendary Profile</string>
+    <string name="premium_legend_profile_customization_notice">Don’t want to stand out?\nIf you disable the custom badge and avatar ring,\nyour profile will look like any other profile on  Primal.</string>
+    <string name="premium_legend_profile_custom_badge">Custom badge</string>
+    <string name="premium_legend_profile_avatar_ring">Avatar ring</string>
+    <string name="premium_legend_profile_apply_button">Apply</string>
 
     <string name="feed_reposted_suffix">reposted</string>
     <string name="feed_see_more">See more…</string>
